--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Concertando os problemas dos coleginhas</p>
     <a href="https://ifc.edu.br">Site do IFC</a>
     <button>Alterar</button>
+    <button>Cancelar</button>
 </body>
 </html>
